--- a/style.css
+++ b/style.css
@@ -4081,7 +4081,7 @@ ul.header-menu {
   .cta-container {
     flex-direction: column;
     gap: 20px;
-    margin: 0px 20px;
+    margin: 0;
     justify-content: space-between;
     transform: translateY(10%);
   }
@@ -4340,7 +4340,9 @@ ul.header-menu {
     width: 100%;
     padding: 20px 10px;
   }
-
+  .footer{
+    padding: 0;
+  }
   .footer-column {
     min-width: 0;
     width: 100%;
